tests/NormalTests/paczka1/fuzzy1/59114359.err
Error in line 9: RQ3e A612 62,72
Error in line 23: dyIM1ELk A528 46,3
Error in line 24: dyIM1ELk A612 67,5
Error in line 22: A612 A788 53,8
Error in line 28: FkmHLX A528 34,2
